--- a/ŞifreKasasiUygulamasi/appsettings.json
+++ b/ŞifreKasasiUygulamasi/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SifreKasasiUygulamasi;Trusted_Connection=True;"
   },
+  "Jwt": {
+    "Key": "iBW62cao56126AJdt5IweyzGoJD8Eps4",
+    "Issuer": "https://localhost:7264/",
+    "Audience": "https://localhost:7264/"
+  },
 
   "AllowedHosts": "*"
 }
